# hippocampus

./: .gitignore  AGENTS.md  Cargo.toml
src/: lib.rs  main.rs  tests.rs
src/llm/: mod.rs  provider.rs  registry.rs
src/policy/: categories.rs  context.rs  mod.rs  tool_profile.rs
src/prompt/: core.md  react_format.md  safety.md
src/prompting/: mod.rs  render.rs  workspace.rs
src/providers/: mod.rs  openai_compatible.rs
src/react/: error.rs  mod.rs  parser.rs  react_loop.rs
src/tools/: catalog.rs  dispatch.rs  lsp_stdio.rs  mod.rs  traits.rs  types.rs  workspace_paths.rs
src/tools/builtin/: echo.rs  glob_search.rs  grep_search.rs  list_dir.rs  lsp.rs  mod.rs  net_echo.rs  read_file.rs
