[package]
name = "hippocampus"
version = "0.1.0"
edition = "2021"
description = "Minimal ReAct-style agent loop (starter scaffold)"

[lib]
path = "src/lib.rs"

[[bin]]
name = "hippocampus"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = true, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
